# ds_base

./: .gitignore  CMakeLists.txt  package.xml
ds_asio/: CMakeLists.txt  CONNECTION_TYPES.md  package.xml
ds_asio/include/ds_asio/: ds_asio.h  ds_callbackqueue.h  ds_connection.h  ds_connection_factory.h  ds_iosm.h  ds_match_functions.h  ds_mock_connection.h  ds_nodehandle.h  ds_rosraw.h  ds_serial.h  ds_tcp_client.h  ds_udp.h
ds_asio/src/ds_asio/: ds_asio.cpp  ds_callbackqueue.cpp  ds_connection.cpp  ds_connection_factory.cpp  ds_iosm.cpp  ds_iosm_private.h  ds_mock_connection.cpp  ds_nodehandle.cpp  ds_rosraw.cpp  ds_serial.cpp  ds_tcp_client.cpp  ds_udp.cpp
ds_asio/test/: test_ds_iosm.cpp  test_ds_match_functions.cpp
ds_base/: CMakeLists.txt  EXTENDING.md  package.xml
ds_base/include/ds_base/: controller_base.h  ds_bus.h  ds_bus_device.h  ds_bus_device_private.h  ds_global.h  ds_process.h  ds_process_private.h  reference_base.h  sensor_base.h  sensor_base_private.h  util.h
ds_base/src/: ds_bus.cpp  ds_bus_device.cpp  ds_bus_device_private.cpp  ds_bus_node.cpp  ds_bus_private.h  ds_process.cpp  ds_process_private.cpp  sensor_base.cpp  sensor_base_private.cpp  util.cpp
ds_base/src/ds_base/: controller_base.cpp  controller_base_private.h  ds_bus.cpp  ds_bus_device.cpp  ds_bus_device_private.cpp  ds_bus_device_private.h  ds_bus_private.h  ds_process.cpp  ds_process_private.cpp  ds_process_private.h  reference_base.cpp  reference_base_private.h  sensor_base.cpp  sensor_base_private.h  util.cpp
ds_base/src/test/: test_ds_process.cpp
ds_base/test/: ds_process.test
ds_param/: CMakeLists.txt  DS_PARAM.md  package.xml
ds_param/include/ds_param/: ds_param.h  ds_param_conn.h  ds_param_guard.h
ds_param/launch/: test.launch
ds_param/src/: ds_param.cpp  ds_param_conn.cpp  ds_param_conn_private.h  ds_param_example.cpp  ds_param_guard.cpp  ds_param_private.h
ds_param/src_py/ds_param/: ds_param.py  ds_param_example.py
ds_util/: CMakeLists.txt  package.xml
ds_util/include/ds_util/: angle.h  bcd_to_int.h  ds_util.h  dynamics.h  float_round.h  fofonoff_depth.h  int_to_hex.h  median.h  reference_smoothing.h  thruster.h
ds_util/src/ds_util/: angle.cpp  bcd_to_int.cpp  dynamics.cpp  float_round.cpp  fofonoff_depth.cpp  median.cpp  reference_smoothing.cpp  thruster.cpp
ds_util/src/test/: test_angle.cpp  test_bcd_to_int.cpp  test_float_round.cpp  test_fofonoff_depth.cpp  test_int_to_hex.cpp  test_reference_smoothing.cpp
ds_util_nodes/: CMakeLists.txt
ds_util_nodes/include/ds_util_nodes/: bridge.h  repeater.h
ds_util_nodes/launch/: bridge.yaml  logger.yaml  spitter.yaml
ds_util_nodes/src/ds_util_nodes/: bridge.cpp
include/ds_base/: ds_asio.h  ds_callbackqueue.h  ds_connection.h  ds_connection_factory.h  ds_match_functions.h  ds_nodehandle.h  ds_process.h  ds_serial.h  ds_udp.h  udp_io.h
include/dsl_base/: dsl_process.h
src/: ds_asio.cpp  ds_callbackqueue.cpp  ds_connection.cpp  ds_connection_factory.cpp  ds_nodehandle.cpp  ds_process.cpp  ds_serial.cpp  ds_udp.cpp  dsl_base.cpp  dsl_process.cpp  udp_io.cpp
